# gapi/converter.go
@@ -3,7 +3,6 @@ package gapi
 import (
 	db "blog_api/db/sqlc"
 	"blog_api/pb"
-	"fmt"
 
 	"google.golang.org/protobuf/types/known/timestamppb"
 )
@@ -11,8 +10,10 @@ import (
 func convertUser(user db.User) *pb.User {
 	return &pb.User{
 		Username:          user.Username,
-		FullName:          fmt.Sprintf("%s %s", user.FirstName, user.LastName),
+		FirstName:         user.FirstName,
+		LastName:          user.LastName,
 		Email:             user.Email,
+		Phone:             user.Phone,
 		PasswordChangedAt: timestamppb.New(user.PasswordChangedAt),
 		CreatedAt:         timestamppb.New(user.CreatedAt),
 	}
